Sun Dec 02 15:17:47 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Thread_Manager.cpp (join): This method mistakenly used the
	  local copy of Thread_Descriptor to change the thread status when
	  it found a thread to join from the <thr_list_>.  This prevented
	  the status of the original Thread_Descriptor to be updated
	  correctly and the same descriptor got put into the
	  <terminated_thr_list_> again, which caused the same thread to be
	  waiting on in some cases.  Changed to manipulate the descriptor
	  directly to avoid the problem.  Thanks to Eyal Lubetzky
	  <eyall@BANDWIZ.COM> for reporting the problem and providing a
	  nice example to showcase it.

Sun Dec  2 12:44:58 2001  Carlos O'Ryan  <coryan@uci.edu>

	* tests/ACE_Init_Test.cpp:
	* tests/ACE_Init_TestDlg.cpp:
	  Protect this test against compilation on non-Win32 platforms,
	  that makes it easier to compile using samwise.

	* tests/RMCast/RMCast_Fragment_Test.cpp:
	* tests/RMCast/RMCast_Membership_Test.cpp:
	* tests/RMCast/RMCast_Reassembly_Test.cpp:
	* tests/RMCast/RMCast_Reordering_Test.cpp:
	* tests/RMCast/RMCast_Retransmission_Test.cpp:
	* tests/RMCast/RMCast_UDP_Best_Effort_Test.cpp:
	  Change #include "test_config.h" to #include "../test_config.h",
	  it is easier to generate makefiles and projects files with
	  samwise if we do that.

Sun Dec 02 12:15:25 2001  Carlos O'Ryan  <coryan@uci.edu>

	* ace/OS.cpp:
	  Fixed typos in ACE_Time_Value::operator++ implementations.
	  Also moved the implementation outside the #ifdef ACE_WIN32
	  section.

Sun Dec  2 12:17:09 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Reactor.i: Fixed a warning in TRU 64. Thanks to
	  <krumpo@pobox.sk>  which reminded me of the fix in one of my
	  workspaces. This shows up only in V6.3-013 (cxx) of the
	  compiler.

Sat Dec  1 19:39:22 2001  Steve Huston  <shuston@riverace.com>

        * ace/Date_Time.i (update): Use ACE_OS::gettimeofday for the time